tests/baselines/reference/asyncGenerators.objectLiteralMethod.9.es5.errors.txt
tests/cases/conformance/asyncGenerators/es5/objectLiteralMethods/asyncGenerators.objectLiteralMethod.9.es5.ts(3,26): error TS1003: Identifier expected.
tests/cases/conformance/asyncGenerators/es5/objectLiteralMethods/asyncGenerators.objectLiteralMethod.9.es5.ts(3,34): error TS1005: '=>' expected.


==== tests/cases/conformance/asyncGenerators/es5/objectLiteralMethods/asyncGenerators.objectLiteralMethod.9.es5.ts (2 errors) ====
    const x = {
        async * f() {
            async function * yield() {
                             ~~~~~
!!! error TS1003: Identifier expected.
                                     ~
!!! error TS1005: '=>' expected.
            }
        }
    }